[package]
name = "buffer"
version = "0.1.0"
authors = ["alexdelorenzo <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = ">=3.1.0"
bufstream = "=0.1.4"

# bytes = "0.5.3"

[profile.release]
opt-level = 3
debug = false 
incremental = true
lto = true

[profile.dev]
opt-level = 3
incremental = true

# [profile.debug]
# opt-level = 3